--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,35 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <meta charset="utf-8" />
+   
     <title></title>
     <link rel="stylesheet" type="text/css" href="CSS.css" />
+
 </head>
 <body>
     <div class="divbody">
-    <div class="divImage">
-    <img src="https://www.warnerbros.com/sites/default/files/styles/key_art_270x400/public/inception_keyart.jpg?itok=7jXiglyb"/>
+        <div id="divImage">
+            <img id="divImg"/>
+        </div>
+        <div class="divtext">
+            <h1 id="movietitle"></h1>
+        <div class="stars">
+            <span id="star1">&#9733;</span>
+            <span id="star2">&#9733;</span>
+            <span id="star3">&#9733;</span>
+            <span id="star4">&#9733;</span>
+            <span id="star5">&#9733;</span>
+        </div>
+            <p id="movieDes">
+            </p>
+            <ul id="actor"></ul>
+        </div>
     </div>
-        <h3>Inception</h3>
-        <p class="movieDes">Inception är en amerikansk thriller/sci-fi/action-långfilm från 2010 i regi av Christopher Nolan som också har skrivit manus. <br />
-        Medverkar gör bland andra Leonardo DiCaprio, Joseph Gordon-Levitt, Ellen Page, Cillian Murphy och Ken Watanabe.
-        </p>
-        <br />
-        <ul>
-            <li>Leonardo DiCaprio</li>
-            <li>Joseph Gordon-Levitt</li>
-            <li>Ellen Page</li>
-            <li>Tom Hardy</li>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="./Data.js"></script>
+    <script src="./Code.js"></script>
 
-        </ul>
-        
-    </div>
 </body>
 </html>
